# file-finder-rust

./: Cargo.toml  README.md  TESTING_SUMMARY.md  dist-workspace.toml  dist.toml
.github/workflows/: ci.yml  release.yml
examples/: performance_test.rs
src/: app.rs  benchmark.rs  cli.rs  configuration.rs  directory_store.rs  errors.rs  file_reader_content.rs  highlight.rs  icons.rs  lib.rs  main.rs  pane.rs  perf_test.rs  status_bar.rs  theme.rs  trie.rs  ui.rs  utils.rs  watcher.rs
src/config/: keymap.rs  mod.rs  settings.rs  theme.rs
src/event/: file_actions.rs  keymap.rs  mod.rs  navigation.rs  search.rs  sort.rs
src/operations/: copy.rs  file_ops.rs  mod.rs
src/render/: mod.rs  popups.rs  preview.rs  size_bar.rs
src/ui/: theme.rs
src/utils/: files.rs  format.rs  mod.rs
test_copy_source/subdir1/: subfile.txt
test_copy_source/subdir1/subdir2/: deepfile.txt
tests/: app_tests.rs  config_and_store_tests.rs  file_operations_tests.rs  unit_tests.rs  watcher_integration_tests.rs
tests/common/: mod.rs
