[package]
name = "file-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
crossterm = "0.27.0"
ratatui = "0.26.2"
serde = {version = "1.0.203" , features = ["derive"]}
walkdir = "2.5.0"
serde_json = "1.0"
fuzzy-matcher = "*"
dirs = "5.0.1"
copypasta = "0.10.1"
rayon = "1.10.0"
