[package]
name = "file-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
crossterm = "0.27.0"
ratatui = "0.26.2"
serde = {version = "1.0.203" , features = ["derive"]}
walkdir = "2.5.0"
serde_json = "1.0"
fuzzy-matcher = "*"
dirs = "5.0.1"
copypasta = "0.10.1"
rayon = "1.10.0"
indicatif = "0.17.8"
ratatui-image = { version = "1.0.5", features = ["crossterm", "rustix"] }
image = "0.25.2"
zip = "2.2.0"
csv = "1.3.0"
syntect = "5.2.0"
log = "0.4.27"
simplelog = "0.12.2"
thiserror = "1.0"
notify = "6.1.1"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"
proptest = "1.4"
