[workspace]
members = ["."]

[workspace.metadata.dist]
ci = "github"
cargo-dist-version = "0.29.0"
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu"
]
installers = ["homebrew"]
tap = "anthonyamaro15/homebrew-tap"
formula = "ff"
unix-archive = ".tar.gz"

[package]
name = "ff"
version = "0.1.8"  # Update this when releasing a new version
edition = "2021"
repository = "https://github.com/anthonyamaro15/file-finder-rust"
homepage = "https://github.com/anthonyamaro15/file-finder-rust"
description = "A blazing-fast TUI file finder with fuzzy search, ranking, and IDE integration"
license = "MIT"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.2"
serde = { version = "1.0.203", features = ["derive"] }
walkdir = "2.5.0"
ignore = "0.4"
serde_json = "1.0"
toml = "0.8.19"
fuzzy-matcher = "*"
dirs = "5.0.1"
copypasta = "0.10.1"
rayon = "1.10.0"
num_cpus = "1"
indicatif = "0.17.8"
ratatui-image = { version = "1.0", features = ["crossterm", "rustix"] }
image = "0.25.2"
zip = "2.2.0"
csv = "1.3.0"
syntect = "5.2.0"
log = "0.4.27"
simplelog = "0.12.2"
thiserror = "1.0"
notify = "6.1.1"
libc = "0.2"
pdf-extract = "0.7"
tar = "0.4"
flate2 = "1.0"
pretty-hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# (bench removed for now; re-add when the file exists)
# [[bench]]
# name = "directory_walk_bench"
# harness = false
# path = "benches/directory_walk_bench.rs"

# Build profile used by cargo-dist
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-dist config
[package.metadata.dist]
dist = true

# Ensure the shipped binary is named `ff`
[[bin]]
name = "ff"
path = "src/main.rs"

